--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -105,31 +105,6 @@ tr.row1 {
 tr.row0 {
         background-color: #ffffff;
 }
-select {
-    height: 30px;
-}
-#header_menu {
-    width: 57%;
-    padding-top: 17px;
-    padding-left: 3%;
-    display: inline-block;
-}
-
-#employee_name {
-    color: #cccccc;
-    width: 36%;
-    padding-right: 3%;
-    text-align: right;
-    display: inline-block;
-}
-
-#header a {
-    color: #eeeeee;
-}
-
-h1 a {
-    color: #eeeeee;
-}
 table#report_list th {
     font-weight: bold;
     padding: 10px 2%;
@@ -149,4 +124,7 @@ table#report_list .report_title {
 
 table#report_list .report_action {
     width: 13%;
+}
+pre {
+    font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
 }
